colcon_ws/log/build_2022-09-10_22-47-59/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:58:48: error: expected primary-expression before ‘max’
   58 |     double numMax = std::numeric_limits<double>max();
      |                                                ^~~
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:59:49: error: expected primary-expression before ‘max’
   59 |     double numMin = -std::numeric_limits<double>max();
      |                                                 ^~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
